--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "@testing-library/user-event": "13.5.0",
     "bootstrap": "^5.3.2",
     "react": "18.2.0",
+    "react-axios": "2.0.6",
     "react-bootstrap": "^2.9.1",
     "react-dom": "18.2.0",
+    "react-icons": "4.12.0",
+    "react-paginate": "8.2.0",
+    "react-pro-sidebar": "0.7.1",
     "react-redux": "8.0.1",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "9.1.3",
     "redux": "4.2.0",
     "redux-devtools-extension": "2.13.9",
     "redux-thunk": "2.4.1",
