--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "13.5.0",
     "bootstrap": "^5.3.2",
     "lodash": "4.17.21",
+    "nprogress": "0.2.0",
     "react": "18.2.0",
     "react-axios": "2.0.6",
     "react-bootstrap": "^2.9.1",
@@ -21,6 +22,7 @@
     "react-toastify": "9.1.3",
     "redux": "4.2.0",
     "redux-devtools-extension": "2.13.9",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "2.4.1",
     "sass": "1.53.0",
     "web-vitals": "2.1.4"
